@@ -59,6 +59,7 @@ Bug Fixes::
 * don't drop line in running content if attribute reference resolves to text that contains attribute reference (not originally present)
 * respect hide-uri-scheme when appending URL to link text when media is print or prepress (#2583)
 * correctly calculate extent for block in columns that starts below doctitle (#2579)
+* support internal link on image (value of link attribute starts with #) (#2572)
 
 Compliance::
 
